wxc/include/ewxw/wxc_glue.h

/* cbBarInfo */
TClassDefExtend(cbBarInfo,wxObject)
TClass(cbBarInfo) cbBarInfo_Create(  );
void       cbBarInfo_Delete( TSelf(cbBarInfo) _obj );
TBool      cbBarInfo_IsExpanded( TSelf(cbBarInfo) _obj );
TBool      cbBarInfo_IsFixed( TSelf(cbBarInfo) _obj );
/* cbBarSpy */
TClassDefExtend(cbBarSpy,wxEvtHandler)
TClass(cbBarSpy) cbBarSpy_Create( void* pPanel );
TClass(cbBarSpy) cbBarSpy_CreateDefault(  );
void       cbBarSpy_Delete( TSelf(cbBarSpy) _obj );
int        cbBarSpy_ProcessEvent( TSelf(cbBarSpy) _obj, TClass(wxEvent) event );
void       cbBarSpy_SetBarWindow( TSelf(cbBarSpy) _obj, void* pWnd );
/* cbCloseBox */
TClassDefExtend(cbCloseBox,cbMiniButton)
TClass(cbCloseBox) cbCloseBox_Create(  );
/* cbCollapseBox */
TClassDefExtend(cbCollapseBox,cbMiniButton)
TClass(cbCollapseBox) cbCollapseBox_Create(  );
/* cbDimHandlerBase */
TClassDefExtend(cbDimHandlerBase,wxObject)

/* cbDimInfo */
TClassDefExtend(cbDimInfo,wxObject)
void       cbDimInfo_Assign( TSelf(cbDimInfo) _obj, void* other );
TClass(cbDimInfo) cbDimInfo_Create( TPoint(x,y), TBool isFixed, int gap, void* pDimHandler );
TClass(cbDimInfo) cbDimInfo_CreateDefault(  );
void*      cbDimInfo_CreateWithHandler( TSelf(cbDimInfo) pDimHandler, TBool isFixed );
void*      cbDimInfo_CreateWithInfo( int dh_x, int dh_y, int dv_x, int dv_y, int f_x, int f_y, TBool isFixed, int horizGap, int vertGap, void* pDimHandler );
void       cbDimInfo_Delete( TSelf(cbDimInfo) _obj );
void*      cbDimInfo_GetDimHandler( TSelf(cbDimInfo) _obj );
/* cbDockBox */
TClassDefExtend(cbDockBox,cbMiniButton)
TClass(cbDockBox) cbDockBox_Create(  );
TClass(cbDockPane) cbDockPane_Create( int alignment, void* pPanel );
TClass(cbDockPane) cbDockPane_CreateDefault(  );
void       cbDockPane_Delete( TSelf(cbDockPane) _obj );
void       cbDockPane_RemoveBar( TSelf(cbDockPane) _obj, void* pBar );
void       cbDockPane_SetMargins( TSelf(cbDockPane) _obj, int top, int bottom, int left, int right );
/* cbFloatedBarWindow */
TClassDefExtend(cbFloatedBarWindow,wxToolWindow)
TClass(cbFloatedBarWindow) cbFloatedBarWindow_Create( void* _obj );
void*      cbFloatedBarWindow_GetBar( TSelf(cbFloatedBarWindow) _obj );
void       cbFloatedBarWindow_PositionFloatedWnd( TSelf(cbFloatedBarWindow) _obj, TRect(_x,_y,_w,_h) );
void       cbFloatedBarWindow_SetBar( TSelf(cbFloatedBarWindow) _obj, void* _bar );
void       cbFloatedBarWindow_SetLayout( TSelf(cbFloatedBarWindow) _obj, void* _layout );
/* cbMiniButton */
TClassDefExtend(cbMiniButton,wxObject)
TClass(cbMiniButton) cbMiniButton_Create(  );
void       cbMiniButton_Delete( TSelf(cbMiniButton) _obj );
void       cbMiniButton_Dim( TSelf(cbMiniButton) _obj, TSizeOutVoid(_w,_h) );
int        cbMiniButton_DragStarted( TSelf(cbMiniButton) _obj );
void       cbMiniButton_Enable( TSelf(cbMiniButton) _obj, TBool enable );
int        cbMiniButton_Enabled( TSelf(cbMiniButton) _obj );
int        cbMiniButton_HitTest( TSelf(cbMiniButton) _obj, TPoint(x,y) );
TBool      cbMiniButton_IsPressed( TSelf(cbMiniButton) _obj );
void*      cbMiniButton_Layout( TSelf(cbMiniButton) _obj );
void*      cbMiniButton_Pane( TSelf(cbMiniButton) _obj );
void*      cbMiniButton_Plugin( TSelf(cbMiniButton) _obj );
void       cbMiniButton_Pos( TSelf(cbMiniButton) _obj, TPointOutVoid(_x,_y) );
int        cbMiniButton_Pressed( TSelf(cbMiniButton) _obj );
void       cbMiniButton_Refresh( TSelf(cbMiniButton) _obj );
void       cbMiniButton_Reset( TSelf(cbMiniButton) _obj );
void       cbMiniButton_SetPos( TSelf(cbMiniButton) _obj, TPoint(x,y) );
int        cbMiniButton_Visible( TSelf(cbMiniButton) _obj );
int        cbMiniButton_WasClicked( TSelf(cbMiniButton) _obj );
void*      cbMiniButton_Wnd( TSelf(cbMiniButton) _obj );
/* cbRowInfo */
TClassDefExtend(cbRowInfo,wxObject)
TClass(cbRowInfo) cbRowInfo_Create(  );
void       cbRowInfo_Delete( TSelf(cbRowInfo) _obj );
void*      cbRowInfo_GetFirstBar( TSelf(cbRowInfo) _obj );
/* wxFrameLayout */
TClassDefExtend(wxFrameLayout,wxEvtHandler)
void       wxFrameLayout_Activate( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_AddBar( TSelf(wxFrameLayout) _obj, void* pBarWnd, void* dimInfo, int alignment, int rowNo, int columnPos, TStringVoid name, int spyEvents, int state );
void       wxFrameLayout_AddPlugin( TSelf(wxFrameLayout) _obj, void* pPlInfo, int paneMask );
void       wxFrameLayout_AddPluginBefore( TSelf(wxFrameLayout) _obj, void* pNextPlInfo, void* pPlInfo, int paneMask );
void       wxFrameLayout_ApplyBarProperties( TSelf(wxFrameLayout) _obj, void* pBar );
void       wxFrameLayout_CaptureEventsForPane( TSelf(wxFrameLayout) _obj, void* toPane );
void       wxFrameLayout_CaptureEventsForPlugin( TSelf(wxFrameLayout) _obj, void* pPlugin );
TClass(wxFrameLayout) wxFrameLayout_Create( void* pParentFrame, void* pFrameClient, int activateNow );
void       wxFrameLayout_Deactivate( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_Delete( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_DestroyBarWindows( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_EnableFloating( TSelf(wxFrameLayout) _obj, TBool enable );
void*      wxFrameLayout_FindBarByName( TSelf(wxFrameLayout) _obj, TStringVoid name );
void*      wxFrameLayout_FindBarByWindow( TSelf(wxFrameLayout) _obj, void* pWnd );
void*      wxFrameLayout_FindPlugin( TSelf(wxFrameLayout) _obj, void* pPlInfo );
void       wxFrameLayout_FirePluginEvent( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
int        wxFrameLayout_GetBars( TSelf(wxFrameLayout) _obj, void* _ref );
int        wxFrameLayout_GetClientHeight( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_GetClientRect( TSelf(wxFrameLayout) _obj, TRectOutVoid(_x,_y,_w,_h) );
int        wxFrameLayout_GetClientWidth( TSelf(wxFrameLayout) _obj );
void*      wxFrameLayout_GetFrameClient( TSelf(wxFrameLayout) _obj );
void*      wxFrameLayout_GetPane( TSelf(wxFrameLayout) _obj, int alignment );
void       wxFrameLayout_GetPaneProperties( TSelf(wxFrameLayout) _obj, void* props, int alignment );
void*      wxFrameLayout_GetParentFrame( TSelf(wxFrameLayout) _obj );
void*      wxFrameLayout_GetTopPlugin( TSelf(wxFrameLayout) _obj );
void*      wxFrameLayout_GetUpdatesManager( TSelf(wxFrameLayout) _obj );
TBool      wxFrameLayout_HasTopPlugin( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_HideBarWindows( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_InverseVisibility( TSelf(wxFrameLayout) _obj, void* pBar );
void       wxFrameLayout_OnLButtonDown( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_OnLButtonUp( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_OnLDblClick( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_OnMouseMove( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_OnRButtonDown( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_OnRButtonUp( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_OnSize( TSelf(wxFrameLayout) _obj, TClass(wxEvent) event );
void       wxFrameLayout_PopAllPlugins( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_PopPlugin( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_PushDefaultPlugins( TSelf(wxFrameLayout) _obj );
void       wxFrameLayout_PushPlugin( TSelf(wxFrameLayout) _obj, void* pPugin );
void       wxFrameLayout_RecalcLayout( TSelf(wxFrameLayout) _obj, int repositionBarsNow );
int        wxFrameLayout_RedockBar( TSelf(wxFrameLayout) _obj, void* pBar, TRect(x,y,w,h), void* pToPane, int updateNow );
void       wxFrameLayout_RefreshNow( TSelf(wxFrameLayout) _obj, int recalcLayout );
void       wxFrameLayout_ReleaseEventsFromPane( TSelf(wxFrameLayout) _obj, void* fromPane );
void       wxFrameLayout_ReleaseEventsFromPlugin( TSelf(wxFrameLayout) _obj, void* pPlugin );
void       wxFrameLayout_RemoveBar( TSelf(wxFrameLayout) _obj, void* pBar );
void       wxFrameLayout_RemovePlugin( TSelf(wxFrameLayout) _obj, void* pPlInfo );
void       wxFrameLayout_SetBarState( TSelf(wxFrameLayout) _obj, void* pBar, int newStatem, int updateNow );
void       wxFrameLayout_SetFrameClient( TSelf(wxFrameLayout) _obj, void* pFrameClient );
void       wxFrameLayout_SetMargins( TSelf(wxFrameLayout) _obj, int top, int bottom, int left, int right, int paneMask );
void       wxFrameLayout_SetPaneBackground( TSelf(wxFrameLayout) _obj, TClass(wxColour) colour );
void       wxFrameLayout_SetPaneProperties( TSelf(wxFrameLayout) _obj, void* props, int paneMask );
void       wxFrameLayout_SetTopPlugin( TSelf(wxFrameLayout) _obj, void* pPlugin );
void       wxFrameLayout_SetUpdatesManager( TSelf(wxFrameLayout) _obj, void* pUMgr );
/* wxToolTip */
TClassDefExtend(wxToolTip,wxObject)

/* wxToolWindow */
TClassDefExtend(wxToolWindow,wxFrame)
void       wxToolWindow_AddMiniButton( TSelf(wxToolWindow) _obj, void* _btn );
TClass(wxToolWindow) wxToolWindow_Create( void* _obj, void* _btn, void* _ttl );
TClass(wxClient) wxToolWindow_GetClient( TSelf(wxToolWindow) _obj );
void       wxToolWindow_SetClient( TSelf(wxToolWindow) _obj, TClass(wxWindow) _wnd );
void       wxToolWindow_SetTitleFont( TSelf(wxToolWindow) _obj, void* _fnt );