wxcl/src/layout/cffi/wxFL.lisp

;;;wxFL.lisp
;;;License  : GNU General Public License (GPL)
;;;Author(s) : Surendra Singhi (surendra@asu.edu) 
;;;Copyright (C) 2005 Surendra Singhi 
;;;See the file LICENSE for information on usage and redistribution.
;;;
;;; $Header$
;;;

(in-package :wxcl-layout)

(defcvar ("EifObj" EifObj)
 :pointer)

(defcvar ("DrwCb" DrwCb)
 :pointer)

(defcfun ("Draw" Draw) :void
  (dc :pointer))

(defcfun ("wxToolWindow_Create" wxToolWindow_Create) :pointer
  (_obj :pointer)
  (_btn :pointer)
  (_ttl :pointer))

(defcfun ("wxToolWindow_SetClient" wxToolWindow_SetClient) :void
  (_obj :pointer)
  (_wnd :pointer))

(defcfun ("wxToolWindow_GetClient" wxToolWindow_GetClient) :pointer
  (_obj :pointer))

(defcfun ("wxToolWindow_SetTitleFont" wxToolWindow_SetTitleFont) :void
  (_obj :pointer)
  (_fnt :pointer))

(defcfun ("wxToolWindow_AddMiniButton" wxToolWindow_AddMiniButton) :void
  (_obj :pointer)
  (_btn :pointer))

(defcfun ("cbMiniButton_Create" cbMiniButton_Create) :pointer)

(defcfun ("cbMiniButton_Delete" cbMiniButton_Delete) :void
  (_obj :pointer))

(defcfun ("cbMiniButton_Pos" cbMiniButton_Pos) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(defcfun ("cbMiniButton_Dim" cbMiniButton_Dim) :void
  (_obj :pointer)
  (w :pointer)
  (h :pointer))

(defcfun ("cbMiniButton_Visible" cbMiniButton_Visible) :int
  (_obj :pointer))

(defcfun ("cbMiniButton_Enabled" cbMiniButton_Enabled) :int
  (_obj :pointer))

(defcfun ("cbMiniButton_Layout" cbMiniButton_Layout) :pointer
  (_obj :pointer))

(defcfun ("cbMiniButton_Pane" cbMiniButton_Pane) :pointer
  (_obj :pointer))

(defcfun ("cbMiniButton_Plugin" cbMiniButton_Plugin) :pointer
  (_obj :pointer))

(defcfun ("cbMiniButton_Wnd" cbMiniButton_Wnd) :pointer
  (_obj :pointer))

(defcfun ("cbMiniButton_DragStarted" cbMiniButton_DragStarted) :int
  (_obj :pointer))

(defcfun ("cbMiniButton_Pressed" cbMiniButton_Pressed) :int
  (_obj :pointer))

(defcfun ("cbMiniButton_SetPos" cbMiniButton_SetPos) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("cbMiniButton_HitTest" cbMiniButton_HitTest) :int
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("cbMiniButton_Refresh" cbMiniButton_Refresh) :void
  (_obj :pointer))

(defcfun ("cbMiniButton_WasClicked" cbMiniButton_WasClicked) :int
  (_obj :pointer))

(defcfun ("cbMiniButton_Reset" cbMiniButton_Reset) :void
  (_obj :pointer))

(defcfun ("cbMiniButton_Enable" cbMiniButton_Enable) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("cbMiniButton_IsPressed" cbMiniButton_IsPressed) :int
  (_obj :pointer))

(defcfun ("cbCloseBox_Create" cbCloseBox_Create) :pointer)

(defcfun ("cbCollapseBox_Create" cbCollapseBox_Create) :pointer)

(defcfun ("cbDockBox_Create" cbDockBox_Create) :pointer)

(defcfun ("cbFloatedBarWindow_Create" cbFloatedBarWindow_Create) :pointer
  (_obj :pointer))

(defcfun ("cbFloatedBarWindow_SetBar" cbFloatedBarWindow_SetBar) :void
  (_obj :pointer)
  (_bar :pointer))

(defcfun ("cbFloatedBarWindow_SetLayout" cbFloatedBarWindow_SetLayout) :void
  (_obj :pointer)
  (_layout :pointer))

(defcfun ("cbFloatedBarWindow_GetBar" cbFloatedBarWindow_GetBar) :pointer
  (_obj :pointer))

(defcfun ("cbFloatedBarWindow_PositionFloatedWnd" cbFloatedBarWindow_PositionFloatedWnd) :void
  (_obj :pointer)
  (_x :int)
  (_y :int)
  (_w :int)
  (_h :int))

(defcfun ("wxFrameLayout_Create" wxFrameLayout_Create) :pointer
  (pParentFrame :pointer)
  (pFrameClient :pointer)
  (activateNow :int))

(defcfun ("wxFrameLayout_Delete" wxFrameLayout_Delete) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_EnableFloating" wxFrameLayout_EnableFloating) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxFrameLayout_Activate" wxFrameLayout_Activate) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_Deactivate" wxFrameLayout_Deactivate) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_HideBarWindows" wxFrameLayout_HideBarWindows) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_DestroyBarWindows" wxFrameLayout_DestroyBarWindows) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_SetFrameClient" wxFrameLayout_SetFrameClient) :void
  (_obj :pointer)
  (pFrameClient :pointer))

(defcfun ("wxFrameLayout_GetFrameClient" wxFrameLayout_GetFrameClient) :pointer
  (_obj :pointer))

(defcfun ("wxFrameLayout_GetParentFrame" wxFrameLayout_GetParentFrame) :pointer
  (_obj :pointer))

(defcfun ("wxFrameLayout_GetPane" wxFrameLayout_GetPane) :pointer
  (_obj :pointer)
  (alignment :int))

(defcfun ("wxFrameLayout_AddBar" wxFrameLayout_AddBar) :void
  (_obj :pointer)
  (pBarWnd :pointer)
  (dimInfo :pointer)
  (alignment :int)
  (rowNo :int)
  (columnPos :int)
  (name :pointer)
  (spyEvents :int)
  (state :int))

(defcfun ("wxFrameLayout_RedockBar" wxFrameLayout_RedockBar) :int
  (_obj :pointer)
  (pBar :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (pToPane :pointer)
  (updateNow :int))

(defcfun ("wxFrameLayout_FindBarByName" wxFrameLayout_FindBarByName) :pointer
  (_obj :pointer)
  (name :pointer))

(defcfun ("wxFrameLayout_FindBarByWindow" wxFrameLayout_FindBarByWindow) :pointer
  (_obj :pointer)
  (pWnd :pointer))

(defcfun ("wxFrameLayout_GetBars" wxFrameLayout_GetBars) :int
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("wxFrameLayout_SetBarState" wxFrameLayout_SetBarState) :void
  (_obj :pointer)
  (pBar :pointer)
  (newStatem :int)
  (updateNow :int))

(defcfun ("wxFrameLayout_InverseVisibility" wxFrameLayout_InverseVisibility) :void
  (_obj :pointer)
  (pBar :pointer))

(defcfun ("wxFrameLayout_ApplyBarProperties" wxFrameLayout_ApplyBarProperties) :void
  (_obj :pointer)
  (pBar :pointer))

(defcfun ("wxFrameLayout_RemoveBar" wxFrameLayout_RemoveBar) :void
  (_obj :pointer)
  (pBar :pointer))

(defcfun ("wxFrameLayout_RecalcLayout" wxFrameLayout_RecalcLayout) :void
  (_obj :pointer)
  (repositionBarsNow :int))

(defcfun ("wxFrameLayout_GetClientHeight" wxFrameLayout_GetClientHeight) :int
  (_obj :pointer))

(defcfun ("wxFrameLayout_GetClientWidth" wxFrameLayout_GetClientWidth) :int
  (_obj :pointer))

(defcfun ("wxFrameLayout_GetClientRect" wxFrameLayout_GetClientRect) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer)
  (w :pointer)
  (h :pointer))

(defcfun ("wxFrameLayout_GetUpdatesManager" wxFrameLayout_GetUpdatesManager) :pointer
  (_obj :pointer))

(defcfun ("wxFrameLayout_SetUpdatesManager" wxFrameLayout_SetUpdatesManager) :void
  (_obj :pointer)
  (pUMgr :pointer))

(defcfun ("wxFrameLayout_GetPaneProperties" wxFrameLayout_GetPaneProperties) :void
  (_obj :pointer)
  (props :pointer)
  (alignment :int))

(defcfun ("wxFrameLayout_SetPaneProperties" wxFrameLayout_SetPaneProperties) :void
  (_obj :pointer)
  (props :pointer)
  (paneMask :int))

(defcfun ("wxFrameLayout_SetMargins" wxFrameLayout_SetMargins) :void
  (_obj :pointer)
  (top :int)
  (bottom :int)
  (left :int)
  (right :int)
  (paneMask :int))

(defcfun ("wxFrameLayout_SetPaneBackground" wxFrameLayout_SetPaneBackground) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxFrameLayout_RefreshNow" wxFrameLayout_RefreshNow) :void
  (_obj :pointer)
  (recalcLayout :int))

(defcfun ("wxFrameLayout_OnSize" wxFrameLayout_OnSize) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_OnLButtonDown" wxFrameLayout_OnLButtonDown) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_OnLDblClick" wxFrameLayout_OnLDblClick) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_OnLButtonUp" wxFrameLayout_OnLButtonUp) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_OnRButtonDown" wxFrameLayout_OnRButtonDown) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_OnRButtonUp" wxFrameLayout_OnRButtonUp) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_OnMouseMove" wxFrameLayout_OnMouseMove) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_FirePluginEvent" wxFrameLayout_FirePluginEvent) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxFrameLayout_CaptureEventsForPlugin" wxFrameLayout_CaptureEventsForPlugin) :void
  (_obj :pointer)
  (pPlugin :pointer))

(defcfun ("wxFrameLayout_ReleaseEventsFromPlugin" wxFrameLayout_ReleaseEventsFromPlugin) :void
  (_obj :pointer)
  (pPlugin :pointer))

(defcfun ("wxFrameLayout_CaptureEventsForPane" wxFrameLayout_CaptureEventsForPane) :void
  (_obj :pointer)
  (toPane :pointer))

(defcfun ("wxFrameLayout_ReleaseEventsFromPane" wxFrameLayout_ReleaseEventsFromPane) :void
  (_obj :pointer)
  (fromPane :pointer))

(defcfun ("wxFrameLayout_GetTopPlugin" wxFrameLayout_GetTopPlugin) :pointer
  (_obj :pointer))

(defcfun ("wxFrameLayout_SetTopPlugin" wxFrameLayout_SetTopPlugin) :void
  (_obj :pointer)
  (pPlugin :pointer))

(defcfun ("wxFrameLayout_PushPlugin" wxFrameLayout_PushPlugin) :void
  (_obj :pointer)
  (pPugin :pointer))

(defcfun ("wxFrameLayout_PopPlugin" wxFrameLayout_PopPlugin) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_PopAllPlugins" wxFrameLayout_PopAllPlugins) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_PushDefaultPlugins" wxFrameLayout_PushDefaultPlugins) :void
  (_obj :pointer))

(defcfun ("wxFrameLayout_AddPlugin" wxFrameLayout_AddPlugin) :void
  (_obj :pointer)
  (pPlInfo :pointer)
  (paneMask :int))

(defcfun ("wxFrameLayout_AddPluginBefore" wxFrameLayout_AddPluginBefore) :void
  (_obj :pointer)
  (pNextPlInfo :pointer)
  (pPlInfo :pointer)
  (paneMask :int))

(defcfun ("wxFrameLayout_RemovePlugin" wxFrameLayout_RemovePlugin) :void
  (_obj :pointer)
  (pPlInfo :pointer))

(defcfun ("wxFrameLayout_FindPlugin" wxFrameLayout_FindPlugin) :pointer
  (_obj :pointer)
  (pPlInfo :pointer))

(defcfun ("wxFrameLayout_HasTopPlugin" wxFrameLayout_HasTopPlugin) :int
  (_obj :pointer))

(defcfun ("cbDimInfo_CreateDefault" cbDimInfo_CreateDefault) :pointer)

(defcfun ("cbDimInfo_CreateWithHandler" cbDimInfo_CreateWithHandler) :pointer
  (pDimHandler :pointer)
  (isFixed :int))

(defcfun ("cbDimInfo_CreateWithInfo" cbDimInfo_CreateWithInfo) :pointer
  (dh_x :int)
  (dh_y :int)
  (dv_x :int)
  (dv_y :int)
  (f_x :int)
  (f_y :int)
  (isFixed :int)
  (horizGap :int)
  (vertGap :int)
  (pDimHandler :pointer))

(defcfun ("cbDimInfo_Create" cbDimInfo_Create) :pointer
  (x :int)
  (y :int)
  (isFixed :pointer)
  (gap :int)
  (pDimHandler :pointer))

(defcfun ("cbDimInfo_Delete" cbDimInfo_Delete) :void
  (_obj :pointer))

(defcfun ("cbDimInfo_Assign" cbDimInfo_Assign) :void
  (_obj :pointer)
  (other :pointer))

(defcfun ("cbDimInfo_GetDimHandler" cbDimInfo_GetDimHandler) :pointer
  (_obj :pointer))

(defcfun ("cbBarInfo_Create" cbBarInfo_Create) :pointer)

(defcfun ("cbBarInfo_Delete" cbBarInfo_Delete) :void
  (_obj :pointer))

(defcfun ("cbBarInfo_IsFixed" cbBarInfo_IsFixed) :int
  (_obj :pointer))

(defcfun ("cbBarInfo_IsExpanded" cbBarInfo_IsExpanded) :int
  (_obj :pointer))

(defcfun ("cbBarSpy_CreateDefault" cbBarSpy_CreateDefault) :pointer)

(defcfun ("cbBarSpy_Create" cbBarSpy_Create) :pointer
  (pPanel :pointer))

(defcfun ("cbBarSpy_Delete" cbBarSpy_Delete) :void
  (_obj :pointer))

(defcfun ("cbBarSpy_SetBarWindow" cbBarSpy_SetBarWindow) :void
  (_obj :pointer)
  (pWnd :pointer))

(defcfun ("cbBarSpy_ProcessEvent" cbBarSpy_ProcessEvent) :int
  (_obj :pointer)
  (event :pointer))

(defcfun ("cbRowInfo_Create" cbRowInfo_Create) :pointer)

(defcfun ("cbRowInfo_Delete" cbRowInfo_Delete) :void
  (_obj :pointer))

(defcfun ("cbRowInfo_GetFirstBar" cbRowInfo_GetFirstBar) :pointer
  (_obj :pointer))

(defcfun ("cbDockPane_CreateDefault" cbDockPane_CreateDefault) :pointer)

(defcfun ("cbDockPane_Create" cbDockPane_Create) :pointer
  (alignment :int)
  (pPanel :pointer))

(defcfun ("cbDockPane_Delete" cbDockPane_Delete) :void
  (_obj :pointer))

(defcfun ("cbDockPane_SetMargins" cbDockPane_SetMargins) :void
  (_obj :pointer)
  (top :int)
  (bottom :int)
  (left :int)
  (right :int))

(defcfun ("cbDockPane_RemoveBar" cbDockPane_RemoveBar) :void
  (_obj :pointer)
  (pBar :pointer))
